# airt-harness

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DAME-DASE-integration.md  TODO-mock-types.md
examples/: pyrit_system_prompt_extraction.py
examples/humanbound/: README.md  bot.json  run-test.sh
harness/: __init__.py  docker.py  docs_cmd.py  firewall.py  gui.py  mock.py  pyrit.py  replay.py  server.py
harness/mappers/: __init__.py  example.py  generic.py
infra/: dame-runner.sh  run-dame-eval.sh  run-scorer-batch.sh  scorer-eval-runner.sh  setup-eval.sh
profiles/baseline/: profile.yaml
profiles/deepvault-agentic/: profile.yaml
profiles/deepvault-agentic/mock/: system_prompt.txt
profiles/default/: profile.yaml
profiles/default/mock/: system_prompt.txt
profiles/mediguide/: README.md  profile.yaml
profiles/mediguide/mock/: system_prompt.txt
profiles/rushed/: profile.yaml
profiles/rushed/mock/: system_prompt.txt
scripts/: airt-launch.sh  airt-logs.sh  airt-replay.sh  airt-stop.sh  smoke-test.sh
